--- a/generic.html
+++ b/generic.html
@@ -41,9 +41,9 @@
 
 										<section class="features">
 										<article>
-											<a href="D:\WeB System-Jelon\ABOUT ME.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti1.jpg" alt="hinay internet" /></a>
+											<a href="ABOUT ME.html" class="image"><img src="pictures\acti1.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 1</h3>
-											<a href="D:\WeB System-Jelon\Aboutme.html.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti3.jpg" alt="hinay internet" /></a>
+											<a href="Aboutme.html.html" class="image"><img src="pictures\acti3.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 3</h3>
 											<a href="D:\WeB System-Jelon\Activity5.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti5.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 5</h3>
