--- a/generic.html
+++ b/generic.html
@@ -45,15 +45,15 @@
 											<h3 class="major">Activity 1</h3>
 											<a href="Aboutme.html.html" class="image"><img src="pictures\acti3.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 3</h3>
-											<a href="D:\WeB System-Jelon\Activity5.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti5.jpg" alt="hinay internet" /></a>
+											<a href="Activity5.html" class="image"><img src="pictures\acti5.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 5</h3>
-											<a href="D:\WeB System-Jelon\Quote1.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti7.jpg" alt="hinay internet" /></a>
+											<a href="Quote1.html" class="image"><img src="pictures\acti7.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 7</h3>
-											<a href="D:\WeB System-Jelon\myvideo.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti9.jpg" alt="hinay internet" /></a>
+											<a href="myvideo.html" class="image"><img src="pictures\acti9.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 9</h3>
-											<a href="D:\WeB System-Jelon\related.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti11.jpg" alt="hinay internet" /></a>
+											<a href="related.html" class="image"><img src="pictures\acti11.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 11</h3>
-											<a href="D:\WeB System-Jelon\friendRegistry.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti13.jpg" alt="hinay internet" /></a>
+											<a href="friendRegistry.html" class="image"><img src="pictures\acti13.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 13</h3>
 											
 											
