--- a/generic.html
+++ b/generic.html
@@ -60,19 +60,19 @@
 
 										</article>
 										<article>
-											<a href="D:\WeB System-Jelon\ABOUT ME.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti2.jpg" alt="hinay internet" /></a>
+											<a href="ABOUT ME.html" class="image"><img src="pictures\acti2.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 2</h3>
-											<a href="D:\WeB System-Jelon\Myfamily.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti4.jpg" alt="hinay internet" /></a>
+											<a href="Myfamily.html" class="image"><img src="pictures\acti4.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 4</h3>
-											<a href="D:\WeB System-Jelon\myPHOTOS.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti6.jpg" alt="hinay internet" /></a>
+											<a href="myPHOTOS.html" class="image"><img src="pictures\acti6.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 6</h3>
-											<a href="D:\WeB System-Jelon\me1.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti8.jpg" alt="hinay internet" /></a>
+											<a href="me1.html" class="image"><img src="pictures\acti8.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 8</h3>
-											<a href="D:\WeB System-Jelon\friendRegistry.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti10.jpg" alt="hinay internet" /></a>
+											<a href="friendRegistry.html" class="image"><img src="pictures\acti10.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 10</h3>
-											<a href="D:\WeB System-Jelon\quotations.html" class="image"><img src="D:\WeB System-Jelon\pictures\acti12.jpg" alt="hinay internet" /></a>
+											<a href="quotations.html" class="image"><img src="pictures\acti12.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 12</h3>
-											<a href="D:\WeB System-Jelon\Catigbian.html" class="image"><img src="D:\WeB System-Jelon\pictures\Midterm.jpg" alt="hinay internet" /></a>
+											<a href="Catigbian.html" class="image"><img src="pictures\Midterm.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Midterm Project</h3>
 
 										</article>
