--- a/me1.html
+++ b/me1.html
@@ -9,7 +9,7 @@
     
       <h3>Silly Photo #1</h3>
       <img
-        src="D:\WeB System-Jelon\pictures\bata.jpg"
+        src="pictures\bata.jpg"
         alt="Silly Picture of Me"
       />
       <a href="me2.html">
