--- a/me2.html
+++ b/me2.html
@@ -13,7 +13,7 @@
       /></a>
       <h3>Silly Photo #2</h3>
       <img
-        src="D:\WeB System-Jelon\pictures\gigutom.jpg"
+        src="pictures\gigutom.jpg"
         alt="Silly Picture of Me"
       />
       <a href="me3.html">
