--- a/ABOUTME.html
+++ b/ABOUTME.html
@@ -19,7 +19,7 @@ body {
 </head>
 <body>
             
-           <img src="D:\WeB System-Jelon\pictures\gwapo.jpg" alt="hinay internet" style="width:25%">
+           <img src="gwapo.jpg" alt="hinay internet" style="width:25%">
 
            <p style="text-align:center; color:darkblue; font-family:Georgia; font-size:11">Hello Everyone!!I am Jelon II L. Billion but you can call me Jelon for short . I am a shy person and I find 
 		   it difficult to interact with other people but now that I am 18 years of age, I am trying to overcome this
