--- a/Aboutme.html.html
+++ b/Aboutme.html.html
@@ -20,7 +20,7 @@
 	</span></center>
 
             
-           <center><img src="D:\WeB System-Jelon\pictures\gwapo.jpg" alt="hinay internet" style="width:25%"></center>
+           <center><img src="gwapo.jpg" alt="hinay internet" style="width:25%"></center>
 
            <p style="text-align:center; color:black; font-family:Georgia; font-size:11">Hello Everyone!!I am Jelon II L. Billion but you can call me Jelon for short . I am a shy person and I find 
 		   it difficult to interact with other people but now that I am 18 years of age, I am trying to overcome this
