--- a/Myfamily.html
+++ b/Myfamily.html
@@ -86,25 +86,25 @@
 	
 	<div class="container">
 		<div class="person">
-			<img src="D:\WeB System-Jelon\pictures\gwapo.jpg" height="100px" width="500" alt="Myself">
+			<img src="gwapo.jpg" height="100px" width="500" alt="Myself">
 			<h2 style="color: white">Myself</h2>
 			<p><b>Hi, I'm Jelon II L. Billion and I am a very shy person.</b></p>
 		</div>
 		
 		<div class="person">
-			<img src="D:\WeB System-Jelon\pictures\papa.jpg" height="100px" width="500" alt="My Dad">
+			<img src="papa.jpg" height="100px" width="500" alt="My Dad">
 			<h2 style="color: white">My Dad</h2>
 			<p><b>My dad is a servant of God and a missionary that preaches the word of God to tribes.</b></p>
 		</div>
 		
 		<div class="person">
-			<img src="D:\WeB System-Jelon\pictures\mama.jpg" height="100px" width="500" alt="My Mom">
+			<img src="mama.jpg" height="100px" width="500" alt="My Mom">
 			<h2 style="color: white">My Mom</h2>
 			<p><b>My mom is a School Principal at Totolan, Dauis, Bohol.</b></p>
 		</div>
 		
 		<div class="person">
-			<img src="D:\WeB System-Jelon\pictures\manghod.jpg" height="100px" width="500" alt="My Sister">
+			<img src="manghod.jpg" height="100px" width="500" alt="My Sister">
 			<h2 style="color: white">My Sister</h2>
 			<p><b>My sister is very annoying but she can be a caring sister for me.</b></p>
         </div>
