--- a/Quote1.html
+++ b/Quote1.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="quotes.css" />
+    <link rel="stylesheet" href="Quotes.css" />
   </head>
   <body>
     <nav title="navigation-bar" class="nav">
