--- a/Quote4.html
+++ b/Quote4.html
@@ -2,25 +2,25 @@
 
 <html>
   <head>
-    <link rel="stylesheet" href="Quotes.css" />
+    <link rel="stylesheet" href="Quotes.css"/>
   </head>
   <body>
     <nav title="navigation-bar" class="nav">
       <ul class="nav-list">
         <li>
-          <a href="quote1.html">QUOTE #1</a>
+          <a href="Quote1.html">QUOTE #1</a>
         </li>
         <li>
-          <a href="quote2.html">QUOTE #2</a>
+          <a href="Quote2.html">QUOTE #2</a>
         </li>
         <li>
-          <a href="quote3.html">QUOTE #3</a>
+          <a href="Quote3.html">QUOTE #3</a>
         </li>
         <li>
-          <a href="quote4.html">QUOTE #4</a>
+          <a href="Quote4.html">QUOTE #4</a>
         </li>
         <li>
-          <a href="quote5.html">QUOTE #5</a>
+          <a href="Quote5.html">QUOTE #5</a>
         </li>
       </ul>
     </nav>
