--- a/generic.html
+++ b/generic.html
@@ -72,7 +72,7 @@
 											<h3 class="major">Activity 10</h3>
 											<a href="quotations.html" class="image"><img src="pictures\acti12.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Activity 12</h3>
-											<a href="Catigbian.html" class="image"><img src="pictures\Midterm.jpg" alt="hinay internet" /></a>
+											<a href="BoholMap.html" class="image"><img src="pictures\Midterm.jpg" alt="hinay internet" /></a>
 											<h3 class="major">Midterm Project</h3>
 
 										</article>
