--- a/Aboutme.html.html
+++ b/Aboutme.html.html
@@ -14,7 +14,7 @@
   	 <center><span>
 	    <a href = "youtube.com"><img src = "https://img.icons8.com/color/1x/youtube-play.png" width = "50px" height = "50px"></a>
 		<a href = "https://www.facebook.com/jelon.luzon"><img src = "https://img.icons8.com/fluency/1x/facebook-new.png" width = "50px" height = "50px"></a>
-		<a href = "instagram.com"><img src = "https://img.icons8.com/color/1x/instagram-new.png" width = "50px" height = "50px"></a>
+		<a href = "https://www.instagram.com/jelonluzon/"><img src = "https://img.icons8.com/color/1x/instagram-new.png" width = "50px" height = "50px"></a>
 		<a href = "https://twitter.com/jelon_ii"><img src = "https://img.icons8.com/color/1x/twitter--v4.png" width = "50px" height = "50px"></a>
 		<a href = "https://www.linkedin.com/feed/?trk=nav_back_to_linkedin"><img src = "https://img.icons8.com/office/1x/linkedin.png" width = "50px" height = "50px"></a>
 	</span></center>
