--- a/quotations.html
+++ b/quotations.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script src="https://kit.fontawesome.com/79166f8cd4.js" crossorigin="anonymous"></script>
-<div class="ponts"><h1><a href="index.html" <i class="fa-solid fa-house" style="font-size: 100%; rotate: 90deg;"></i></a>                      POINTS TO PONDER</h1>
+<div class="ponts"><h1><a href="generic.html" <i class="fa-solid fa-house" style="font-size: 100%; rotate: 90deg;"></i></a>                      POINTS TO PONDER</h1>
 </div>
 <style>
 body {
@@ -259,98 +259,98 @@ color: white;
 <body>
 
 <div class="quote">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">A</span> man is but the product of his thoughts; what he thinks, he becomes.<span><br>— Mahatma Gandhi —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">A</span> man is but the product of his thoughts; what he thinks, he becomes.<span><br>â€” Mahatma Gandhi â€”</br></span></p>
 </div>
 
 <div class="quote2">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">A</span>nyone who has never made a mistake has never tried anything new.<span><br>— Albert Einstein —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">A</span>nyone who has never made a mistake has never tried anything new.<span><br>â€” Albert Einstein â€”</br></span></p>
 </div>
 
 <div class="quote3">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">B</span>e a student as long as you still have something to learn, and this will mean all your life.<span><br>— Henry L. Doherty —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">B</span>e a student as long as you still have something to learn, and this will mean all your life.<span><br>â€” Henry L. Doherty â€”</br></span></p>
 </div>
 
 <div class="quote4">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">D</span>on’t say you don’t have enough time. You have exactly the same number of hours per day that
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">D</span>onâ€™t say you donâ€™t have enough time. You have exactly the same number of hours per day that
 were given to Helen Keller, Pasteur, Michelangelo, Mother Teresa, Leonardo da Vinci, Thomas
-Jefferson, and Albert Einstein.<span><br>— H. Jackson Brown Jr. —</br></span></p>
+Jefferson, and Albert Einstein.<span><br>â€” H. Jackson Brown Jr. â€”</br></span></p>
 </div>
 
 <div class="quote5">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">E</span>ducation is the most powerful weapon, which you can use to change the world.<span><br>— Nelson
-Mandela —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">E</span>ducation is the most powerful weapon, which you can use to change the world.<span><br>â€” Nelson
+Mandela â€”</br></span></p>
 </div>
 
 <div class="quote6">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">E</span>ducation is what survives when what has been learned has been forgotten.<span><br>— B. F. Skinner —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">E</span>ducation is what survives when what has been learned has been forgotten.<span><br>â€” B. F. Skinner â€”</br></span></p>
 </div>
 
 <div class="quote7">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">E</span>ven if you’re on the right track, you’ll get run over if you just sit there.<span><br>— Will Rogers —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">E</span>ven if youâ€™re on the right track, youâ€™ll get run over if you just sit there.<span><br>â€” Will Rogers â€”</br></span></p>
 </div>
 
 <div class="quote8">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">I</span>f you don’t go after what you want, you’ll never have it. If you don’t ask, the answer is always
-no. If you don’t step forward, you’re always in the same place.<span><br>— Nora Roberts —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">I</span>f you donâ€™t go after what you want, youâ€™ll never have it. If you donâ€™t ask, the answer is always
+no. If you donâ€™t step forward, youâ€™re always in the same place.<span><br>â€” Nora Roberts â€”</br></span></p>
 </div>
 
 <div class="quote9">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">I</span>f you hear a voice within you say ‘you cannot paint,’ then by all means paint, and that voice will
-be silenced.<span><br>— Vincent Van Gogh —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">I</span>f you hear a voice within you say â€˜you cannot paint,â€™ then by all means paint, and that voice will
+be silenced.<span><br>â€” Vincent Van Gogh â€”</br></span></p>
 </div>
 
 <div class="quote10">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">I</span>magination is more important than knowledge.<span><br>— Albert Einstein —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">I</span>magination is more important than knowledge.<span><br>â€” Albert Einstein â€”</br></span></p>
 </div>
 
 <div class="quote11">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">K</span>nowing is not enough; we must apply. Willing is not enough; we must do.<span><br>— Johann
-Wolfgang von Goethe —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">K</span>nowing is not enough; we must apply. Willing is not enough; we must do.<span><br>â€” Johann
+Wolfgang von Goethe â€”</br></span></p>
 </div>
 
 <div class="quote12">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">L</span>earn from yesterday, live for today, hope for tomorrow.<span><br>— Albert Einstein —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">L</span>earn from yesterday, live for today, hope for tomorrow.<span><br>â€” Albert Einstein â€”</br></span></p>
 </div>
 
 <div class="quote13">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">N</span>one are more hopelessly enslaved than those who falsely believed they are free.<span><br>— Johann
-Wolfgang von Goethe —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">N</span>one are more hopelessly enslaved than those who falsely believed they are free.<span><br>â€” Johann
+Wolfgang von Goethe â€”</br></span></p>
 </div>
 
 <div class="quote14">
 <p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">O</span>ur greatest weakness lies in giving up. The most certain way to succeed is always to try just
-one more time.<span><br>— Thomas A. Edison —</br></span></p>
+one more time.<span><br>â€” Thomas A. Edison â€”</br></span></p>
 </div>
 
 <div class="quote15">
 <p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">P</span>eace begins with a smile.. Every time you smile at someone, it is an action of love, a gift to that
-person, a beautiful thing.<span><br>— Mother Teresa —</br></span></p>
+person, a beautiful thing.<span><br>â€” Mother Teresa â€”</br></span></p>
 </div>
 
 <div class="quote16">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">S</span>uccess consists of going from failure to failure without loss of enthusiasm.<span><br>— Winston
-Churchill —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">S</span>uccess consists of going from failure to failure without loss of enthusiasm.<span><br>â€” Winston
+Churchill â€”</br></span></p>
 </div>
 
 <div class="quote17">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">T</span>ake risks. If you win, you will be happy. If your lose, you will be wise.<span><br>— Unknown —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">T</span>ake risks. If you win, you will be happy. If your lose, you will be wise.<span><br>â€” Unknown â€”</br></span></p>
 </div>
 
 <div class="quote18">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">Y</span>our time is limited, don’t waste it living someone else’s life. Don’t be trapped by dogma, which
-is living the result of other people’s thinking. Don’t let the noise of other’s opinion drowned your
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">Y</span>our time is limited, donâ€™t waste it living someone elseâ€™s life. Donâ€™t be trapped by dogma, which
+is living the result of other peopleâ€™s thinking. Donâ€™t let the noise of otherâ€™s opinion drowned your
 own inner voice. And most important, have the courage to follow your heart and intuition, they
-somehow already know what you truly want to become. Everything else is secondary.<span><br>— Steve
-Jobs —</br></span></p>
+somehow already know what you truly want to become. Everything else is secondary.<span><br>â€” Steve
+Jobs â€”</br></span></p>
 </div>
 
 <div class="quote19">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">T</span>he bad news is time flies. The good news is you’re the pilot.<span><br>— Michael Altshuler —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">T</span>he bad news is time flies. The good news is youâ€™re the pilot.<span><br>â€” Michael Altshuler â€”</br></span></p>
 </div>
 
 <div class="quote20">
-<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">T</span>he greatest glory in living lies not in never falling, but in rising every time we fall.<span><br>— Nelson
-Mandela —</br></span></p>
+<p style="font-size: 130%"><span style="font-family: calibri; color: white; font-size: 150%">T</span>he greatest glory in living lies not in never falling, but in rising every time we fall.<span><br>â€” Nelson
+Mandela â€”</br></span></p>
 </div>
 </body>
 </html>
