--- a/friendRegistry.html
+++ b/friendRegistry.html
@@ -6,9 +6,9 @@
         body {
             font-family: georgia, sans-serif;
             background-color: #33E6FF;
-			background-image: url('https://cdn.create.vista.com/api/media/small/63829885/stock-photo-tree-reflected-in-the-lake');
-			background-repeat: "no-repeat";
-			background-size: cover;
+	    background-image: url('https://cdn.create.vista.com/api/media/small/63829885/stock-photo-tree-reflected-in-the-lake');
+	    background-repeat: "no-repeat";
+	    background-size: cover;
             margin: 0;
             padding: 0;
         }
@@ -17,11 +17,13 @@
             margin: 0 auto;
             padding: 20px;
             background-color: #060606;
+	    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS73YHBkGMHqk-k_oOF4-Ik4IloR7IFZzuIjQ&usqp=CAU');
             opacity: 5.5;
             color: #007bff;
             border: 1px solid #007bff;
             border-radius: 5px;
             box-shadow: ridge -2px 2px 2px rgba(252, 249, 249, 0.1);
+	    text-align: center;
         }
         h1 {
             text-align: center;
