--- a/friendRegistry.html
+++ b/friendRegistry.html
@@ -75,11 +75,11 @@
                 <option value="male">Male</option>
                 <option value="female">Female</option>
             </select> 
-            <label for="hobbies">Hobbies:</label> <br>
+            <label for="hobby">Hobby:</label> <br>
             
           <br>
-            <input type="checkbox" id="sports" name="hobbies" value="sports">
-            <label for="sports">Sports</label>
+            <input type="checkbox" id="programming" name="hobby" value="programming">
+            <label for="programming">Programming</label>
             <br>
            <br> <label for="bio">Bio:</label> 
             <br>
