--- a/related.html
+++ b/related.html
@@ -28,7 +28,7 @@
       font-weight: 400;
       line-height: 1.3;
       color: white;
-      background-image: url("https://img.freepik.com/free-vector/blue-curve-background_53876-113112.jpg");
+      background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAIpkgBDvtgO01qV6nyulWW-pS-WdWuCUv1Uig9ZDj&s");
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -299,7 +299,7 @@
   <section title="letter M" id="m">
     <h1>M</h1>
     <ul>
-      <li>< a href="http://bitly.ws/HxvZ" target="_blank">MAGNO, ARTURO JOSE T.</a></li>
+      <li><a href="http://bitly.ws/HxvZ" target="_blank">MAGNO, ARTURO JOSE T.</a></li>
       <li>MAMAC, JEHU I.</li>
       <li>MANUEL, JOSHUA JOSEPH R.</li>
     </ul>
