--- a/friendRegistry.html
+++ b/friendRegistry.html
@@ -64,7 +64,7 @@
 <body>
     <div class="container">
         <h1>Friend Registry</h1>
-        <form id="friendForm" action="https://script.google.com/macros/s/AKfycbwFhpd4uTwvZ2x2kLhbcnDjLFRZnwoY0mqDeT3QEAX3uZGo1Y4UaQKUOD39xyAkf3h2/exec" method='post'>
+        <form id="friendForm" action="https://script.google.com/macros/s/AKfycbxrim49QFtBb54yN7v0sl76xPAh6wiMfR739qcCtUZkIq55PTwuyg_ciMaa1uyr92NV/exec" method='post'>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="age">Age:</label>
@@ -80,6 +80,12 @@
           <br>
             <input type="checkbox" id="programming" name="hobby" value="programming">
             <label for="programming">Programming</label>
+            <input type="checkbox" id="sports" name="hobby2" value="sports">
+            <label for="sports">Sports</label>
+            <input type="checkbox" id="singing" name="hobby3" value="singing">
+            <label for="singing">Singing</label>
+            <input type="checkbox" id="dancing" name="hobby4" value="dancing">
+            <label for="dancing">Dancing</label>
             <br>
            <br> <label for="bio">Bio:</label> 
             <br>
